# ampliFi-center-management

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  gap-analysis.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260426_phase10_review_decided_by.py  20260426_phase11_employee_table.py  20260426_phase12_username.py  20260426_phase13_nullable_wave_id.py  20260426_phase25_merge.py  20260426_phase2_schema.py  20260426_phase3_llm_usage.py  20260426_phase4_wave_hier_scope.py  20260426_phase5_mv_balance.py  20260426_phase6_gl_ranges.py  20260426_phase7_wave_templates.py  20260426_phase8_activity_feed.py  20260426_phase9_housekeeping_constraint.py  20260427_phase14_datasphere_config.py  20260427_phase15_hierarchy_label.py  20260428_phase16_explorer_source_config.py  20260428_phase17_sap_table_alignment.py  20260428_phase18_sap_full_alignment.py  20260428_phase19_gl_accounts_display_config.py  20260428_phase20_sap_connection_extended.py  20260428_phase21_upload_progress.py  20260428_phase22_target_upload_mapping.py  20260428_phase23_column_labels.py  20260505_phase24_scope_segregation.py  20260505_phase25_v2_decision_tree.py  20260505_phase25_widen_varchar4.py  20260506_phase26_housekeeping_pc.py  20260506_phase27_cc_pc_owner_fk.py  20260507_phase28_wave_archive.py  20260507_phase29_multi_role.py  20260508_phase30_widen_sap_columns.py  20260508_phase31_widen_zzstrinadt.py  20260508_phase32_employee_active_dq.py  20260509_phase33_widen_sap_columns2.py  20260510_phase34_center_exclusion_rules.py  20260511_phase35_refresh_batch_indexes.py  20260511_phase36_cc_description.py  20260525_phase37_hier_node_text.py  20260525_phase38_widen_txtsh_search_fields.py
backend/app/: cli.py  config.py  main.py
backend/scripts/: generate_sample_data.py
backend/tests/: conftest.py  test_decision_tree.py  test_email_engine.py  test_mdg_export.py  test_naming_engine.py
(+221 files in other folders)
